# pre-commit-hooks

./: .gitlab-ci.yml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  setup.py
hooks/: __init__.py  branch-merge-conflicts  docker_compose_validate.py  packer_fix.py  packer_fmt.py  packer_validate.py  poetry_check.py  terraform_fmt.py  terraform_validate.py  utils.py
test_files/: docker-compose.yml  packer.json  playbook.yml  pyproject.toml  template.pkr.hcl
